# core

./: .gitignore  .golangci.yml  404.html  CONTRIBUTING.md  Makefile  NOTICE  README.md  REUSE.toml  canard.yaml  core.yaml  ella.yaml  go.mod  go.sum  index.html  index.md  llms-full.txt  llms.txt  logs.txt  mkdocs.yml  moose.yaml  requirements-docs.in  requirements-docs.txt  requirements.in  requirements.txt  rockcraft-tester.yaml  rockcraft.yaml  sitemap.xml  sqlc.yaml  tox.ini
internal/upf/ebpf/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  attach_test.go  control_test.go  encap_test.go  far_test.go  flow_test.go  framed_test.go  gtp_parse_test.go  ipentrypoint_bpf.go  measure_test.go  n3entrypoint_bpf.go  n3n6entrypoint_bpf.go  n6entrypoint_bpf.go  nat_test.go  objects.go  objects_test.go  packet_test.go  paging_test.go  parser_test.go  pdr.go  pdr_test.go  pmtu_test.go  qer_test.go  reload_maps_test.go  sdf_test.go  source_spoof_test.go  stats.go  stats_test.go  utils.go  veth_objects.go  veth_test.go  vethentrypoint_bpf.go  vlan_test.go  zeroentrypoint_bpf.go
internal/upf/ebpf/xdp/: n3_bpf.c  n3_bpf.h  n3_entrypoint.c  n3n6_bpf.c  n3n6_entrypoint.c  n6_bpf.c  n6_bpf.h  n6_entrypoint.c  pdr_n3.h  pdr_n6.h  sdf_filter.h  statistics.h  veth_bpf.c
internal/upf/ebpf/xdp/utils/: common.h  csum.h  flow.h  frag_needed.h  gtp.h  gtpu.h  icmp.h  ip_addr.h  n3_gtp_utils.h  n3_icmp.h  n3_packet_context.h  n3_parsers.h  n3_pdr.h  n3_sdf_filter.h  n3_statistics.h  n6_gtp_utils.h  n6_icmp.h  n6_packet_context.h  n6_parsers.h  n6_pdr.h  n6_sdf_filter.h  n6_statistics.h  nat.h  nocp.h  packet_context.h  parsers.h  pdr.h  pdr_maps.h  profile.h  profiling.h  qer.h  routing.h  rs_event.h  sdf.h  sdf_filter.h  statistics.h  trace.h  types.h  urr.h
(+4338 files in other folders)
